# Recommendation

./: .gitignore  .gitmodules  LOGGING_SYSTEM.md  README.md  Structure.mermaid  __init__.py  pyproject.toml  requirements.txt  setup.py  test_logging.py
.cursor/rules/: pydantic.mdc
config/: __init__.py  rec_config.py
core/: __init__.py  recommendation_engine.py
examples/: __init__.py  logging_example.py  recommendation_example.py
filters/: __init__.py  safety_filter.py
ranking/: __init__.py  diversity_injector.py  exploration_engine.py  heavy_ranker.py  light_ranker.py
recommendation/: __init__.py  base.py  strategies.py  system.py
sourcing/: __init__.py  candidate_sourcing.py  in_network_source.py  out_network_source.py  social_proof_source.py
trace/: QUICKSTART.md  README.md
utils/: __init__.py  decorators.py  log_analyzer.py  logger.py  trace_request.py
